<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragments.UserRegisterFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/register"
            android:textSize="30dp"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/register_down"
            app:layout_constraintEnd_toEndOf="@+id/textView4"
            app:layout_constraintStart_toStartOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <LinearLayout
            android:id="@+id/boxlinearlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="60dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5">

            <EditText
                android:id="@+id/edit_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/user24"
                android:drawablePadding="20dp"
                android:ems="10"
                android:theme="@style/MyEditTextTheme"
                android:hint="@string/hint_name"
                android:inputType="textPersonName"
                android:minHeight="48dp" />

            <EditText
                android:id="@+id/userEmail"
                android:theme="@style/MyEditTextTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:drawableLeft="@drawable/email24"
                android:drawablePadding="20dp"
                android:drawableTint="@color/black"
                android:ems="10"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:minHeight="48dp" />



            <EditText
                android:theme="@style/MyEditTextTheme"
                android:id="@+id/userPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:drawableLeft="@drawable/password_lock"
                android:drawablePadding="20dp"
                android:ems="10"
                android:hint="@string/lock_hint"
                android:inputType="textPassword"
                android:minHeight="48dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/check_Box_linearLayout"
            android:layout_width="match_parent"
            android:layout_margin="50dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/boxlinearlayout"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/checkBox"
                android:buttonTint="@color/theme1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/agreement" />

            <com.github.ybq.android.spinkit.SpinKitView
                android:visibility="gone"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/progress_bar"
                android:indeterminate="true"
                style="@style/SpinKitView.ThreeBounce"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:SpinKit_Color="@color/black"
                tools:ignore="RedundantNamespace" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/check_Box_linearLayout">

            <TextView
                android:id="@+id/signUp_button"
                android:layout_width="match_parent"
                android:layout_height="?android:attr/actionBarSize"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:background="@drawable/bottom_background"
                android:backgroundTint="@color/theme1"
                android:fontFamily="@font/poppins_bold"
                android:gravity="center"
                android:text="@string/signUp"
                android:textColor="@color/white"
                android:textSize="25dp" />



            <TextView
                android:id="@+id/signIn"
                android:layout_width="match_parent"
                android:layout_height="?android:attr/actionBarSize"
                android:layout_marginTop="10dp"
                android:elevation="10dp"
                android:fontFamily="@font/poppins_bold"
                android:gravity="center"
                android:text="@string/signIn"
                android:textColor="@color/theme1"
                android:textSize="20dp" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>